2007-04-04  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: support casts to generic types
	* vala/valasymbolresolver.vala, vala/valatypereference.vala: support
	  arrays of generic types
	* vala/valasymbolresolver.vala: don't take ownership of elements of weak
	  arrays
	* vala/valasemanticanalyzer.vala: accept uint as index value
	* vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala,
	  vala/valastatement.vala: minor cleanup of creation methods
	* vala/valacodegenerator.vala: support creation methods for structs, fix
	  pointer as return type
	* vapi/glib-2.0.vala: add CLAMP and g_spaced_primes_closest

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vapi/math.vala: add mathematical functions, patch by
	  Mathias Hasselmann
	* vapi/Makefile.am: update

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: initialize new array elements after
	  resizing an array, patch by Mathias Hasselmann
	* vala/valaproperty.vala: fix for interface properties

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* doc/valac.1, doc/Makefile.am: add manual page for valac written by
	  Marc-André Lureau
	* Makefile.am, configure.ac: update

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l, vala/parser.y, vala/valasemanticanalyzer.vala,
	  vala/valatypereference.vala: support declaration of local arrays
	* tests/test-022.vala: test local array declaration

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolbuilder.vala, vala/valacodegenerator.vala: some fixes
	  for abstract properties
	* vala/valamethod.vala: improve default cname

2007-04-03  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: extend unicode support, add GRegex

2007-03-28  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala: declare HashFunc and EqualFunc as callback
	  functions, patch by David Keijser

2007-03-25  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/vte.vala, vapi/vte.deps: add vte binding
	* vapi/Makefile.am: update

2007-03-24  Raffaele Sandrini  <rasa@gmx.ch>
